--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pyqtgraph = "^0.12.3"
 pyqtdarktheme = "^1.0.2"
 QtPy = "^2.0.0"
 rich = "^11.1.0"
+pyinstaller = "^4.8"
 
 [tool.poetry.dev-dependencies]
 # Flake8
