--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ numpy = "^1.21.4"
 QtAwesome = "^1.1.1"
 typing-extensions = "^3.10.0"
 pyqtgraph = "^0.12.3"
-pyqtdarktheme = "^1.0.2"
-QtPy = "^2.0.0"
 rich = "^11.1.0"
 pyinstaller = "^4.8"
+QtPy = "^2.1.0"
+pyqtdarktheme = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 # Flake8
@@ -36,7 +36,7 @@ flake8-pytest-style = "^1.6.0"
 
 pre-commit = "^2.15.0"
 isort = "^5.10.0"
-black = "^21.10b0"
+black = "^22.3"
 pytest = "^6.2.5"
 pyinstaller = "^4.6"
 py2app = "0.25"
