--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,62 @@
-[tool.poetry]
-name = "pyautolab"
-version = "0.1.0"
-description = "A python application for scientific experiments automation"
-authors = ["5yutan5 <63651161+5yutan5@users.noreply.github.com>"]
-license = "MIT"
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry.scripts]
+[project]
+name = "pyautolab"
+description = "A python application for scientific experiments automation"
+readme = "README.md"
+requires-python = ">=3.11"
+license = {text = "MIT License"}
+version = "0.1.0"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Natural Language :: English",
+    "Environment :: X11 Applications :: Qt",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+]
+dependencies = [
+    "psutil",
+    "pyserial",
+    "numpy",
+    "Qtpy",
+    "QtAwesome",
+    "pyqtgraph",
+    "pyqtdarktheme",
+]
+
+[tool.setuptools.package-data]
+"*" = ["*.json"]
+
+[project.optional-dependencies]
+dev = [
+    "black",
+    "isort",
+    "pyinstaller",
+    # flake8
+    "flake8",
+    "flake8-return",
+    "flake8-pie",
+    "flake8-print",
+    "flake8-docstrings",
+    "flake8-bugbear",
+    "flake8-simplify",
+    "flake8-comprehensions",
+    "flake8-eradicate",
+    "flake8-rst-docstrings",
+    "flake8-pyproject",
+    "flake8-pytest-style",
+    "pep8-naming",
+]
+
+[project.gui-scripts]
 pyautolab = "pyautolab.__main__:main"
 
-[tool.poetry.dependencies]
-python = ">=3.9,<3.12"
-darkdetect = "^0.7.1"
-psutil = "^5.9.4"
-pyserial = "^3.5"
-numpy = "^1.24.1"
-QtAwesome = "^1.2.2"
-typing-extensions = "^4.4.0"
-pyqtgraph = "^0.13.1"
-rich = "^13.0.0"
-QtPy = "^2.3.0"
-pyqtdarktheme = "^2.1.0"
-
-[tool.poetry.dev-dependencies]
-# Flake8
-flake8 = "^4.0.1"
-pyproject-flake8 = "^0.0.1-alpha.2"
-flake8-return = "^1.1.3"
-flake8-print = "^4.0.0"
-flake8-bugbear = "^21.11.29"
-flake8-simplify = "^0.14.2"
-flake8-comprehensions = "^3.7.0"
-flake8-eradicate = "^1.2.0"
-flake8-pytest-style = "^1.6.0"
-
-pre-commit = "^2.15.0"
-isort = "^5.10.0"
-black = "^22.3"
-pytest = "^6.2.5"
-pyinstaller = "^5.7.0"
-py2app = "0.25"
-pytest-qt = "^4.0.2"
-pytest-xvfb = "^2.0.0"
-pyupgrade = "^2.29.1"
-
-[tool.poetry.plugins."pyinstaller40"]
+[project.entry-points."pyinstaller40"]
 hook-dirs = "pyautolab.__pyinstaller:get_hook_dirs"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.flake8]
 max-line-length = 119
